<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Barometer Graph</string>
    <string name="hello_world">Hello world!</string>
    <string name="delete_recording">Delete</string>
    <string name="rename">Rename</string>
    <string name="share_recording">Share</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about">About</string>
    <string name="save_recording">Save this recording</string>
    <string name="rename_recording">Rename this recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="start_recording">Start Recording</string>
    <string name="save_history">Save History</string>
    <string name="save_and_record">Save History + Record</string>
    <string name="my_recordings">My Recordings</string>
    <string name="settings_disabled">Some settings are disabled while recording</string>
    <string name="data_unit">Data Unit</string>
    <string name="unit_of_measurement">Unit of measurement</string>
    <string name="running_average">Running Average</string>
    <string name="running_average_info">This value determines the running average size. 1 is raw sensor data.</string>
    <string name="graph_auto_scale">Graph Auto Scale</string>
    <string name="graph_auto_scale_description">Graph will auto scale to data when enabled.</string>
    <string name="clear_history">Clear Data History</string>
    <string name="clear_history_description">Clears the current graph data.</string>
    <string name="clear">Clear</string>
    <string name="auto_scroll">Auto Scroll</string>
    <string name="sorry">Sorry :(</string>
    <string name="no_sensor_message">Your device does not have a barometer sensor</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="no_data">No data</string>
    <string name="send">Send</string>
    <string name="no_file_permission">"You have no applications to receive the file"</string>
    <string name="recording">"Recording"</string>
    <string name="ok">Ok</string>
    <string name="data_options">"Data Options"</string>
    <string name="reset_graph_warning">Changing the unit will reset the graph and clear its history. Are you sure?</string>
    <string name="clear_graph_warning">Clearing the graph cannot be undone, Are you sure?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="about_msg">Barometer graph displays, filters, records, and exports data captured by your devices barometer sensor. Feedback and comments are appreciated! </string>

</resources>
