<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" >

    <com.ghsoft.barometergraph.views.ExpanderView
        android:id="@+id/recording_expander"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/stop_recording"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/stop_recording"/>

            <Button
                android:id="@+id/record_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_recording"/>

            <Button
                android:id="@+id/save_history_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_history"/>

            <Button
                android:id="@+id/save_record_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_and_record"/>

        </LinearLayout>

    </com.ghsoft.barometergraph.views.ExpanderView>


</LinearLayout>