<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical" >

    <com.ghsoft.barometergraph.views.ExpanderView
        android:id="@+id/expander"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/warning_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="5pt"
            android:padding="3dp"
            android:visibility="gone"
            android:textColor="@color/red"
            android:text="@string/settings_disabled"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/data_unit"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="20dp"
                    android:text="@string/unit_of_measurement"/>
            </LinearLayout>

            <Spinner
                android:layout_width="wrap_content"
                android:id="@+id/unit_picker"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/running_average"
                    android:id="@+id/textView"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="20dp"
                    android:text="@string/running_average_info"
                    android:layout_below="@id/textView"
                    android:id="@+id/textView1"/>
            </LinearLayout>

            <NumberPicker
                android:id="@+id/picker"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/graph_auto_scale"
                    android:id="@+id/textView2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="20dp"
                    android:text="@string/graph_auto_scale_description"
                    android:layout_below="@id/textView"
                    android:id="@+id/textView3"/>
            </LinearLayout>
            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="match_parent">
                <CheckBox
                    android:id="@+id/auto_scale"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/clear_history"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="20dp"
                    android:text="@string/clear_history_description"
                    android:layout_below="@id/textView"/>
            </LinearLayout>
            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="match_parent">
                <Button
                    android:layout_gravity="center"
                    android:text="@string/clear"
                    android:id="@+id/clear_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </FrameLayout>

        </LinearLayout>

    </com.ghsoft.barometergraph.views.ExpanderView>
</LinearLayout>